# teslaui

./: LICENSE  README.md
TeslaUI/: CMakeLists.txt  Main.qml  main.cpp
TeslaUI/BottomBar/: BottomBar.qml
